[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mistype"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = []              

[project.scripts]
mistype = "src.mistype.cli:main" 

[tool.hatch.build.targets.wheel]
include = [
  "src/mistype/**/*.py",
  "src/mistype/data/typo-distribution.json",
]
